tests/errors/2006-27.vb
'#compiler-options:/imports:
'#compiler-message:Command line error BC2006 : option 'imports' requires ':<import_list>'
'#exit-code:1